--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/image6.jpg"
+              src="./assets/images/image6.png"
               id="imagecar"
               class="d-block w-100"
               alt="..."
@@ -104,7 +104,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/image7.jpg"
+              src="./assets/images/image7.png"
               id="imagecar"
               class="d-block w-100"
               alt="..."
@@ -112,7 +112,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/image8.jpg"
+              src="./assets/images/image8.png"
               id="imagecar"
               class="d-block w-100"
               alt="..."
@@ -120,7 +120,7 @@
           </div>
           <div class="carousel-item">
             <img
-              src="./assets/images/image9.jpg"
+              src="./assets/images/image9.png"
               id="imagecar"
               class="d-block w-100"
               alt="..."
