--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
           voluptate quaerat saepe repellendus atque ea cum explicabo, unde
           aliquid. Lorem ipsum dolor, sit amet consectetur adipisicing elit.
           Odio, sit? Quis beatae nobis dignissimos quaerat quae eius officiis
-          commodi doloribus.
+          commodi.
         </p>
       </section>
 
