--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <body>
     <div class="con">
-      <header class="headercss" id="headercss" style="z-index: 1">
+      <header class="headercss" id="headercss" style="z-index: 1000">
         <nav id="header" class="button-container">
           <a href="#carouselExampleAutoplaying" class="custom-button">
             <i class="fa fa-home"></i> Home
@@ -189,24 +189,27 @@
           <img src="./assets/images/xbox_PNG101377.png" alt="Image 1" />
         </div>
       </div>
-      <div class="smallheader" id="moreitems">
-        <h1>More Items</h1>
-      </div>
 
-      <div class="grid-wrapper">
-        <div class="grid-item">
-          <img src="./assets/images/image3.png" alt="Image 1" />
+      <section id="moreitems" style="margin-top: 10px">
+        <div class="smallheader" style="padding-top: 30px">
+          <h1>More Items</h1>
         </div>
-        <div class="grid-item">
-          <img src="./assets/images/image2.png" alt="Image 1" />
+
+        <div class="grid-wrapper">
+          <div class="grid-item">
+            <img src="./assets/images/image3.png" alt="Image 1" />
+          </div>
+          <div class="grid-item">
+            <img src="./assets/images/image2.png" alt="Image 1" />
+          </div>
+          <div class="grid-item">
+            <img src="./assets/images/image4.png" alt="Image 1" />
+          </div>
+          <div class="grid-item">
+            <img src="./assets/images/image1.png" alt="Image 1" />
+          </div>
         </div>
-        <div class="grid-item">
-          <img src="./assets/images/image4.png" alt="Image 1" />
-        </div>
-        <div class="grid-item">
-          <img src="./assets/images/image1.png" alt="Image 1" />
-        </div>
-      </div>
+      </section>
 
       <section class="aboutus" id="aboutus">
         <h1>About Us</h1>
